@@ -1,0 +1,61 @@
+.\" $NetBSD: viornd.4,v 1.1 2014/10/26 18:43:18 tls Exp $
+.\"
+.\" Copyright (c) 2014 The NetBSD Foundation, Inc.
+.\" All rights reserved.
+.\"
+.\" This code is derived from software contributed to The NetBSD Foundation
+.\" by Thor Lancelot Simon.
+.\"
+.\" Redistribution and use in source and binary forms, with or without
+.\" modification, are permitted provided that the following conditions
+.\" are met:
+.\" 1. Redistributions of source code must retain the above copyright
+.\"    notice, this list of conditions and the following disclaimer.
+.\" 2. Redistributions in binary form must reproduce the above copyright
+.\"    notice, this list of conditions and the following disclaimer in the
+.\"    documentation and/or other materials provided with the distribution.
+.\"
+.\" THIS SOFTWARE IS PROVIDED BY THE NETBSD FOUNDATION, INC. AND CONTRIBUTORS
+.\" ``AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
+.\" TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+.\" PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE FOUNDATION OR CONTRIBUTORS
+.\" BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+.\" CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+.\" SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+.\" INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+.\" CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+.\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+.\" POSSIBILITY OF SUCH DAMAGE.
+.\"
+.Dd October 26, 2014
+.Dt VIORND 4
+.Os
+.Sh NAME
+.Nm viornd
+.Nd VirtIO entropy source
+.Sh SYNOPSIS
+.Cd "viornd* at virtio?"
+.Sh DESCRIPTION
+When the system has entropy demand,
+the
+.Nm
+driver, used with a compatible hypervisor such as QEMU, KVM, or Google
+Compute Engine, requests entropy using the VirtIO random number interface
+and feeds it into the system entropy pool.
+.Sh SEE ALSO
+.Xr virtio 4 ,
+.Xr rnd 4
+.Sh HISTORY
+The
+.Nm
+driver appeared in
+.Ox 5.5 .
+.Sh AUTHORS
+The
+.Nm
+driver was written by Stephan Fritsch <sf@fritsch.de> and reworked to
+request entropy upon demand by Thor Lancelot Simon <tls@NetBSD.ORG>.
+.Sh CAVEATS
+VirtIO appears to support at least 8 pending entropy requests, but
+.Nm
+currently supports only one pending request at a time.
